enum-derived/tests/rand/08-fail-for-struct-enum.stderr
error[E0277]: the trait bound `Standard: Distribution<String>` is not satisfied
 --> tests/rand/08-fail-for-struct-enum.rs:3:10
  |
3 | #[derive(Rand)]
  |          ^^^^ the trait `Distribution<String>` is not implemented for `Standard`
  |
  = help: the following other types implement trait `Distribution<T>`:
            <Standard as Distribution<()>>
            <Standard as Distribution<(A, B)>>
            <Standard as Distribution<(A, B, C)>>
            <Standard as Distribution<(A, B, C, D)>>
            <Standard as Distribution<(A, B, C, D, E)>>
            <Standard as Distribution<(A, B, C, D, E, F)>>
            <Standard as Distribution<(A, B, C, D, E, F, G)>>
            <Standard as Distribution<(A, B, C, D, E, F, G, H)>>
          and $N others
  = note: required for `String` to implement `Rand`
  = note: this error originates in the derive macro `Rand` (in Nightly builds, run with -Z macro-backtrace for more info)
